--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,3 @@
-/* body{
-    background-image: url("https://channel45news.com/wp-content/uploads/2017/06/2lsbfbk.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: auto;
-    object-fit:cover;
-    background-attachment: fixed;
-    
-} */
-
 
 h1{
     font-family: "Barriecito";
@@ -18,24 +8,28 @@ h1{
 .header{
     width: 250px;
     height: 250px;
-    margin: auto;
+    margin: 10px;
     object-fit:cover;
     display: inline-block;
     text-align: center;
     opacity:1;
+    border-radius: 50%;
 
     
 }
-h3{
+#creeper{
     text-align: center;
-    font-family: "Rubik Mono One";
-    margin-top: 15px;
-    margin-bottom: 20px;
-    margin-left: 150px;
+    font-family: "Creepster";
+    margin:auto;
+    background:rgba(0, 0, 0, 0.7);
+    /* margin-left: 28%; */
     display: inline-block;
     padding-bottom: 8px;
     padding-top: 6px;
-    background-color: yellow;
+    color: whitesmoke;
+    letter-spacing: 10px;
+    
+    
 
 
 }
@@ -46,9 +40,11 @@ h3{
     margin: auto;
     background-image: url("https://as2.ftcdn.net/jpg/00/62/02/13/1000_F_62021304_L3UarRi5RZmCjqdL7ripQBdOcWihdhqp.jpg");
     background-size: cover;
+    object-fit: cover;
     background-repeat: no-repeat;
     padding-bottom: 0px;
     padding-top: 16px;
+   
 
 }
 
@@ -65,6 +61,189 @@ h2{
     object-fit:cover;
 
 }
+#mainDiv{
+    background: rgb(166, 166, 166,0.5);
+   
+
+    
+}
+.facts{
+    font-family:"Viga";
+}
+#footer{
+    text-align: center;
+    background-color: black;
+    color: whitesmoke;
+    font-family: "Monoton";
+    letter-spacing: 4.5px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    clear: both;
+    margin-top: 100px;
+   
+    }
+
+
+#crimeMap{
+    font-family:"Barriecito";
+}
+#facts{
+    font-family:"Viga";
+}
+#factHead{
+    font-weight: bold;
+    font-family: "Creepster";
+    text-decoration: underline;
+    text-align: center;
+    margin: auto;
+    margin-left: 25px;
+
+}
+#know{
+    font-family:"Barriecito"
+}
+
+#instructRow{
+    margin:auto;
+}
+
+#searchRow{
+    margin:auto;
+
+}
+#jcont{
+    margin-top:45px;
+}
+#welcome{
+    color: whitesmoke;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 95%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color:black;
+  }
+  
+  #picBox:hover .overlay {
+    opacity: 1;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+  
+  #intro{
+      
+      text-align:center;
+      color: black;
+      -webkit-text-decoration: black double overline;
+      text-decoration: black double overline;
+      -webkit-text-decoration-skip: space;
+      text-decoration-skip: space;
+      -webkit-text-decoration: black double underline;
+      text-decoration: black double underline;
+      -webkit-text-decoration-skip: space;
+      text-decoration-skip: space;
+      
+  }
+  
+
+
+
+
+/* sleek nav bar code starts */
+/* General sizing */
+ul.dropdown-lr {
+  width: 300px;
+} 
+
+
+/* mobile fix  */
+ @media (max-width: 768px) {
+	.dropdown-lr h3 {
+		color: #eee;
+	}
+	.dropdown-lr label {
+		color: #eee;
+	}
+}
+
+/* sleek nav bar code ends */
+
+
+
+
+
+    /* mikes css begins */
+
+/* .buttonColor {
+    background-color: darkgray;
+    border: none;
+    box-shadow: none;
+    color: black;
+    border-radius: 25px;
+    margin-right: 2px;
+    outline: 0;
+ 
+ }
+ 
+ .spacing {
+    margin-right: 10px;
+    outline: 0;
+ }
+ 
+ .navCSS {
+    background-color: darkgray;
+    margin-right: 2px;
+    outline: 0;
+ } 
+ 
+.textFields {
+    background-color: darkgray;
+    color: black;
+    box-shadow: none;
+    margin-right: 2px;
+    border: 1px, solid;
+    border-color: darkgray;
+    padding: 0px;
+    outline: 0;
+ }
+#mapCont{
+    margin-bottom: 100px;
+    background: rgb(166, 166, 166,0.5);
+}
+#searchCol{
+    text-align:center;
+}
+#map{
+    border-radius: 3%;
+}
+#searchBut:active{
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+    background-color: #668;
+
+}
+#searchBut:hover{
+    background-color:#669;
+} */
+
+
+
 
 
   
